projects/plugins/jetpack/modules/carousel/jetpack-carousel.css
/* ... */
.jp-carousel-comment:last-of-type {
	margin-bottom: 20px;
}

.jp-carousel-comment p {
	color: #999 !important;
}

.jp-carousel-comment .comment-author {
	font-size: 15px;
	font-weight: 500;
	padding: 0;
	width: auto;
	display: inline;
	float: none;
	border: none;
	margin: 0;
}

.jp-carousel-comment .comment-author a {
	color: #fff;
}

.jp-carousel-comment .comment-gravatar {
	float: none;
	margin-right: 10px;
}

.jp-carousel-comment .comment-content {
	border: none;
	padding: 0;
}

.jp-carousel-comment .avatar {
	margin: 0;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border-radius: 4px;
	border: none !important;
	padding: 0 !important;
	background-color: transparent !important;
	min-width: 64px;
	min-height: 64px;
	width: 64px;
	height: 64px;
}

.jp-carousel-comment .comment-date {
	color: #999;
	font-size: 11px;
	border-bottom: 1px solid #222;
	margin-bottom: 6px;
}

#jp-carousel-comment-form {
	margin: 0 0 10px !important;
	width: 100%;
}

#jp-carousel-comment-form.jp-carousel-is-disabled {
	opacity: 0.5;
	pointer-events: none;
}

textarea#jp-carousel-comment-form-comment-field {
	background: rgba( 34, 34, 34, 0.9 );
	border: 1px solid #3a3a3a;
	color: #a7aaad;
	font: 16px/1.4 'Helvetica Neue', sans-serif !important;
	width: 100%;
	padding: 10px 10px 5px;
	margin: 0;
	float: none;
	height: 147px;
	-webkit-box-shadow: inset 2px 2px 2px rgba( 0, 0, 0, 0.2 );
	box-shadow: inset 2px 2px 2px rgba( 0, 0, 0, 0.2 );
	-moz-border-radius: 3px;
	-webkit-border-radius: 3px;
	border-radius: 3px;
	overflow: hidden;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

textarea#jp-carousel-comment-form-comment-field::-webkit-input-placeholder {
	color: #555;
}

textarea#jp-carousel-comment-form-comment-field:focus {
	background: #ccc;
	color: #222;
}

textarea#jp-carousel-comment-form-comment-field:focus::-webkit-input-placeholder {
	color: #a7aaad;
}

#jp-carousel-loading-overlay {
	display: none;
	position: fixed;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
}

#jp-carousel-loading-wrapper {
	display: flex;
	align-items: center;
	justify-content: center;
	height: 100vh;
	width: 100vw;
}

#jp-carousel-library-loading,
#jp-carousel-library-loading:after {
	border-radius: 50%;
	width: 40px;
	height: 40px;
}

#jp-carousel-library-loading {
	float: left;
	margin: 22px 0 0 10px;
	font-size: 10px;
	position: relative;
	text-indent: -9999em;
	border-top: 8px solid rgba( 255, 255, 255, 0.2 );
	border-right: 8px solid rgba( 255, 255, 255, 0.2 );
	border-bottom: 8px solid rgba( 255, 255, 255, 0.2 );
	border-left: 8px solid #ffffff;
	-webkit-transform: translateZ( 0 );
	-ms-transform: translateZ( 0 );
	transform: translateZ( 0 );
	-webkit-animation: load8 1.1s infinite linear;
	animation: load8 1.1s infinite linear;
}

#jp-carousel-comment-form-spinner,
#jp-carousel-comment-form-spinner:after {
	border-radius: 50%;
	width: 20px;
	height: 20px;
}
#jp-carousel-comment-form-spinner {
	display: none;
	float: left;
	margin: 22px 0 0 10px;
	font-size: 10px;
	position: absolute; /* relative to .jp-carousel-comment-form-container */
	text-indent: -9999em;
	border-top: 4px solid rgba( 255, 255, 255, 0.2 );
	border-right: 4px solid rgba( 255, 255, 255, 0.2 );
	border-bottom: 4px solid rgba( 255, 255, 255, 0.2 );
	border-left: 4px solid #ffffff;
	-webkit-transform: translateZ( 0 );
	-ms-transform: translateZ( 0 );
	transform: translateZ( 0 );
	-webkit-animation: load8 1.1s infinite linear;
	animation: load8 1.1s infinite linear;
	margin: 0 auto;
	top: 40%;
	left: 0;
	bottom: 0;
	right: 0;
}

@-webkit-keyframes load8 {
	0% {
		-webkit-transform: rotate( 0deg );
		transform: rotate( 0deg );
	}
	100% {
		-webkit-transform: rotate( 360deg );
		transform: rotate( 360deg );
	}
}
@keyframes load8 {
	0% {
		-webkit-transform: rotate( 0deg );
		transform: rotate( 0deg );
	}
	100% {
		-webkit-transform: rotate( 360deg );
		transform: rotate( 360deg );
	}
}

.jp-carousel-info-content-wrapper {
	max-width: 800px;
	margin: auto;
}

#jp-carousel-comment-form-submit-and-info-wrapper {
	display: none;
	overflow: hidden;
	width: 100%;
}

#jp-carousel-comment-form-commenting-as input {
	background: rgba( 34, 34, 34, 0.9 );
	border: 1px solid #3a3a3a;
	color: #a7aaad;
	font: 16px/1.4 'Helvetica Neue', sans-serif !important;
	padding: 10px;
	float: left;
	-webkit-box-shadow: inset 2px 2px 2px rgba( 0, 0, 0, 0.2 );
	box-shadow: inset 2px 2px 2px rgba( 0, 0, 0, 0.2 );
	-moz-border-radius: 2px;
	-webkit-border-radius: 2px;
	border-radius: 2px;
	width: 285px;
}

#jp-carousel-comment-form-commenting-as input:focus {
	background: #ccc;
	color: #222;
}

#jp-carousel-comment-form-commenting-as p {
	font: 400 13px/1.7 'Helvetica Neue', sans-serif !important;
	margin: 22px 0 0;
	float: left;
}

#jp-carousel-comment-form-commenting-as fieldset {
	float: left;
	border: none;
	margin: 20px 0 0 0;
	padding: 0;
	clear: both;
}

#jp-carousel-comment-form-commenting-as label {
	font: 400 13px/1.7 'Helvetica Neue', sans-serif !important;
	margin: 0 20px 3px 0;
	float: left;
	width: 100px;
}

#jp-carousel-comment-form-button-submit {
	margin-top: 20px;
	margin-left: auto;
	display: block;
	border: solid 1px white;
	background: rgba( 34, 34, 34, 0.9 );
	border-radius: 3px;
	padding: 8px 16px;
	font-size: 14px;
}

#jp-carousel-comment-form-button-submit:active,
#jp-carousel-comment-form-button-submit:focus {
	background: white;
	color: rgba( 34, 34, 34, 0.9 );
}

#jp-carousel-comment-form-container {
	margin-bottom: 15px;
	overflow: auto;
	width: 100%;
	margin-top: 20px;
	color: #999;
	position: relative;
}

#jp-carousel-comment-post-results {
	display: none;
	overflow: auto;
	width: 100%;
}
/* ... */

